@@ -10,6 +10,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -28,8 +29,11 @@ public class TaskServiceImpl implements TaskService {
         return taskMapper.mapToDTO(taskDao.getTaskById(id));
     }
 
-    public List<TaskDto> getAllTasks() {
-        return taskDao.getAllTasks().stream().map(taskMapper::mapToDTO).toList();
+    public List<TaskDto> getTasksWithPagination(int pageNumber, int pageSize) {
+        List<Task> tasks = taskDao.getTasksWithPagination(pageNumber, pageSize);
+        return tasks.stream()
+                .map(taskMapper::mapToDTO)
+                .collect(Collectors.toList());
     }
 
     public void updateTask(TaskDto taskDto) {
